' Copyright (C) 2019 - present Luca Breisinger
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Film" {
  * id: integer <<generated>>
  --
  * version: integer
  * preis: number
  * rabatt: number
    veroeffentlichungsdatum: date
  * erzeugt: timestamp
  * aktualisiert: timestamp
  * bewertung: number
  * **produktionsstudio_id**: integer <<FK>>
    genres: text
    anbieter: text
  * imdbEintrag: text
  * titel: text

}

entity "Produktionsstudio" {
  * id: integer <<generated>>
  --
  * name: text
}

entity "Produzent" {
  * id: integer <<generated>>
  --
  * vorname: text
  * nachname: text
  * **film_id**: integer <<FK>>
}

Film ||..|| Produktionsstudio
Film ||..o{ Produzent

footer (c) Luca Breisinger

@enduml
